--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-node_modules
+node_modules/
 dist
 .tmp
 .sass-cache
-bower_components
+bower_components/
+.log
+logs/*
+!.gitkeep
+tmp
+.DS_Store
+.idea
