--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,16 @@
 {
   "name": "shopping-cart",
   "version": "0.0.0",
+  "description": "A starter project for shopping cart",
+  "homepage": "https://github.com/rajumjib/shopping-cart-checkout-using-angularjs",
+  "license": "MIT",
   "dependencies": {
     "angular": "^1.3.0",
+    "angular-route": "^1.3.0",
+    "angular-loader": "^1.3.x",
+    "angular-mocks": "~1.3.x",
+    "html5-boilerplate": "~4.3.0",
+    
     "json3": "^3.3.0",
     "es5-shim": "^4.0.0",
     "bootstrap": "^3.2.0",
@@ -11,7 +19,6 @@
     "angular-cookies": "^1.3.0",
     "angular-messages": "^1.3.0",
     "angular-resource": "^1.3.0",
-    "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0"
   },
