Home and about view are updated. Unit testing reports are added

--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "karma-chrome-launcher": "^0.1.7",
     "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "^0.3.5",
+    "karma-jasmine-html-reporter-livereload": "^1.0.0",
+    "karma-jasmine-runner-reporter": "^0.1.0",
+    "karma-js-coverage": "^0.4.0",
     "karma-junit-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^3.1.0",
