--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,6 @@
     "angular-loader": "^1.3.x",
     "angular-mocks": "~1.3.x",
     "html5-boilerplate": "~4.3.0",
-    
     "json3": "^3.3.0",
     "es5-shim": "^4.0.0",
     "bootstrap": "^3.2.0",
@@ -21,8 +20,8 @@
     "angular-resource": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-
-    "angular-ui-router": "^0.2.0"
+    "angular-ui-router": "^0.2.0",
+    "jasmine": "~2.2.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
